# MAgDPOTLC

./: .gitignore  data_collector.py  main.py  requirements.txt  run-data.xlsx  run_agent_parallel.py
constants/: constants.json
data/: nairobi_evening.json  nairobi_morning.json
environments/: ab_street_env.py  abstreet_client.py  environment.py
kitukiasi/: pyproject.toml  scenario.json  scenario_test.json
kitukiasi/ma3/: __init__.py
kitukiasi/ma3/cities/: __init__.py  base.py  nairobi.py
kitukiasi/ma3/scenarios/: __init__.py  __main__.py  config.py  departures.py  distributions.py  exporter.py  od_matrix.py  population.py  purposes.py  types.py  zoning.py
kitukiasi/tests/: test_config.py  test_distributions.py  test_end_to_end.py  test_zoning.py
models/: ppo_model.py
utils/: utils.py
workers/: matatu_ppo_worker.py  ppo_worker.py  rule_worker.py  worker.py
